# musicorg

./: .gitignore  DISTRIBUTION.md  PUBLIC_API.md  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release-appimage.yml
docs/: architecture.md  cli-reference.md  development.md  index.md  install.md  troubleshooting.md  tui.md  upgrade.md  wizard.md
examples/: 01_basic_scan.py  02_progress_callback.py  03_full_pipeline.py  04_custom_extension.py  05_embed_in_fastapi.py  06_embed_in_pyside.py  README.md
examples/typescript-client/: README.md
packaging/: launcher.py  musicorg-gui.spec
packaging/AppDir-template/: AppRun  musicorg.desktop
scripts/: build_appimage.sh
src/musicorg/: __init__.py  _binaries.py  approval.py  backup.py  canonicalize.py  clean.py  config.py  dedupe.py  executor.py  identity.py  misc.py  models.py  planner.py  refingerprint.py  resolve.py  scan.py  tags.py  upgrade.py  zip_probe.py
src/musicorg/cli/: main.py  wizard.py
src/musicorg/cli/tui/: canonical_app.py  review_app.py
src/musicorg/extensions/: __init__.py  protocol.py
src/musicorg/gui/: __init__.py
src/musicorg/lookup/: __init__.py  breaker.py  itunes.py  jiosaavn.py  scoring.py  shazam.py
src/musicorg_cli/: __init__.py  main.py  wizard.py
src/musicorg_cli/tui/: __init__.py  canonical_app.py  dup_review_app.py  fill_app.py
src/musicorg_gui/: __init__.py  __main__.py  app.py  bootstrap.py  library_index.py  main_window.py  platform.py  theme.py
src/musicorg_gui/screens/: __init__.py  completion.py  dashboard.py  dedupe_results.py  gamdl_setup.py  metadata.py  pipeline.py  undo.py  upgrade.py  welcome.py
src/musicorg_gui/widgets/: __init__.py  bootstrap_dialog.py  design.py  status_panel.py
src/musicorg_gui/workers/: __init__.py  base.py  canonicalize_worker.py  dedupe_worker.py  execute_worker.py  plan_worker.py  resolve_worker.py  scan_worker.py  undo_worker.py  upgrade_worker.py
tests/fixtures/: build_fixture.py
